feat: add pagination and search query on project
